fix: CTA Links are usable at all screen sizes
The previous addition of a second link to the CTA component was not
thoroughly tested at mobile screen sizes. This PR ensures the links stack
at small screen and have no overlap.

--- a/components/call-to-action/call-to-action.module.scss
+++ b/components/call-to-action/call-to-action.module.scss
@@ -31,18 +31,40 @@
     p {
       margin-bottom: 3rem;
     }
+  }
+
+  &__link-container {
+    $bp-links-move-inline: 37.5rem;
+
+    display: flex;
+    flex-direction: column;
+
+    @media (min-width: $bp-links-move-inline) {
+      flex-direction: row;
+    }
 
     a {
-      width: 15rem;
+      width: 100%;
       padding: 0.5rem;
       font-size: 1.15rem;
       border: 3px white solid;
+      box-sizing: border-box;
       color: white;
       background-color: rgba(0, 0, 0, 0);
       text-decoration: none;
 
+      @media (min-width: $bp-links-move-inline) {
+        width: fit-content;
+        max-width: 15rem;
+      }
+
       & + a {
-        margin-left: 1.4rem;
+        margin-top: 1.5rem;
+
+        @media (min-width: $bp-links-move-inline) {
+          margin-top: 0;
+          margin-left: 1.5rem;
+        }
       }
 
       &:hover {
